--- a/html/projects_ta.html
+++ b/html/projects_ta.html
@@ -62,7 +62,7 @@
                 <h3 class="panel-title">crm</h3>
             </div>
             <div class="panel-body">
-                <table class="table" style="margin-bottom: 0">
+                <table class="table table-striped" style="margin-bottom: 0">
                     <tr>
                         <td>序号</td>
                         <td>内容</td>
